...
    let collapseParent: (() -> Void)?

    var share: ((Int) -> Void)?

    var menuButtons: some View {
        Group {
            PostButton(label: "Reply", image: "arrowshape.turn.up.left") {
                showingReply = true
                // WHY?????
                commentModel.objectWillChange.send()
            }
            PostButton(label: "Upvote", image: "arrow.up") {
                commentModel.vote(direction: true, apiModel: apiModel)
...
                if apiModel.moderates?.contains(where: { $0.id == commentModel.comment.community.id }) == true {
                    let distinguished = commentModel.comment.comment.distinguished
                    PostButton(label: distinguished ? "Undistinguish" : "Distinguish as Moderator", image: distinguished ? "shield.slash" : "shield") {
                        commentModel.distinguish(apiModel: apiModel)
                    }
                }
                PostButton(label: "Edit", image: "pencil") {
                    showingEdit = true
                    // WHY?????
                    commentModel.objectWillChange.send()
                }
                let deleted = commentModel.comment.comment.deleted
                PostButton(label: deleted ? "Restore" : "Delete", image: deleted ? "trash.slash" : "trash") {
                    commentModel.delete(apiModel: apiModel)
                }
            } else {
                if apiModel.moderates?.contains(where: { $0.id == commentModel.comment.community.id }) == true {
                    let removed = commentModel.comment.comment.removed
                    PostButton(label: removed ? "Restore" : "Remove", image: removed ? "trash.slash" : "trash") {
...
                                .foregroundStyle(.secondary)
                        }
                    }
                    .redacted(reason: .privacy)
                    if !collapsed {
                        if commentModel.comment.comment.deleted {
                            Text("deleted by creator")
                                .italic()
                        } else if commentModel.comment.comment.removed {
                            Text("removed by mod")
                                .italic()
                        } else {
                            MarkdownView(processMarkdown(input: commentModel.comment.comment.content, stripImages: !commentImages), baseURL: URL(string: apiModel.url)!)
...
    }

    var sheet: some View {
        NavigationView {
            Form {
                DatePicker("Date", selection: $remindDate)
                Button("Submit", action: addReminder)
            }
            .navigationTitle("Add Reminder")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button("Cancel") {
...
