...
                            } else if apiModel.selectedAccount == nil {
                                NavigationView {
                                    AuthenticationView()
                                }
                            } else {
                                InboxView()
                                    .navigationTitle("Inbox")
                                    .navigationBarTitleDisplayMode(.inline)
                                    .handleNavigations(navModel: inboxNavModel)
                            }
                        }
                        .offset(x: selected == .Inbox ? 0 : -UIScreen.main.bounds.width)
                        ZStack {
...
                                NavigationView {
                                    AuthenticationView()
                                }
                                .navigationViewStyle(.stack)
                            } else {
                                UserView(currentUser: true)
                                    .navigationTitle("Accounts")
                                    .navigationBarTitleDisplayMode(.inline)
                                    .handleNavigations(navModel: userNavModel)
                            }
                        }
                        .offset(x: selected == .Accounts ? 0 : -UIScreen.main.bounds.width)
                        ZStack {
...
                    }
                    if let requestedUrl = selectedTab.requestedUrl {
                        if requestedUrl.absoluteString.contains("post") {
                            DispatchQueue.main.asyncAfter(deadline: .now() + 0.1) {
                                appendView(model: ResolveModel<LemmyApi.PostView>(thing: requestedUrl))
                            }
                        } else if requestedUrl.absoluteString.contains("comment") {
                            DispatchQueue.main.asyncAfter(deadline: .now() + 0.1) {
                                appendView(model: ResolveModel<LemmyApi.CommentView>(thing: requestedUrl))
                            }
                        }
                        selectedTab.requestedUrl = nil
                    }
...
